# dj_blog

./: docker-compose.yml  pyproject.toml
perfect_blog/: manage.py
perfect_blog/apps/blog/: admin.py  apps.py  forms.py  models.py  queryset.py  urls.py  utils.py  views.py
perfect_blog/apps/blog/migrations/: 0001_initial.py  0002_post_like.py  0003_remove_post_like_post_dislikes_post_likes.py  0004_remove_post_dislikes_remove_post_likes_and_more.py
perfect_blog/apps/blog/templates/blog/: about.html  addpost.html  base.html  delete_post.html  editpost.html  index.html  list_categories.html  post.html
perfect_blog/apps/blog/templatetags/: blog_tags.py
perfect_blog/apps/user/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
perfect_blog/apps/user/migrations/: 0001_initial.py
perfect_blog/apps/user/templates/user/: edit_profile.html  login.html  registration.html  user_profile.html
perfect_blog/blog/: admin.py  forms.py  models.py  permissions.py  urls.py  utils.py  views.py
perfect_blog/blog/templates/blog/: about.html  base.html  editpost.html  index.html  post.html
perfect_blog/blog/templatetags/: blog_tags.py
perfect_blog/core/: models.py  utils.py
perfect_blog/locale/en_US/LC_MESSAGES/: django.mo  django.po
perfect_blog/perfect_blog/: asgi.py  settings.py  urls.py  wsgi.py
perfect_blog/settings/: settings.py  urls.py
perfect_blog/templates/: base.html
perfect_blog/user/: admin.py  forms.py  models.py  urls.py  views.py
perfect_blog/user/templates/user/: login.html  registration.html
(+2 files in other folders)
