[tool.poetry]
name = "dj-blog"
version = "0.1.0"
description = ""
authors = ["iliaman <iliaman1993@gmail.com>"]
readme = "README.md"
packages = [{include = "dj_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
